--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/student/Pulpit/projekt/itextpdf-5.4.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
