--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 
             <scope>compile</scope>
         </dependency>
+        <dependency>
+        	<groupId>junit</groupId>
+        	<artifactId>junit</artifactId>
+        	<version>4.11</version>
+        </dependency>
     </dependencies>
 
 </project>
